<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_discard"
        style="@style/MaterialButton"
        android:text="@string/discard" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_symbol"
        style="@style/MaterialButton"
        android:text="@string/change_symbol" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_percent"
        style="@style/MaterialButton"
        android:text="@string/percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"
        style="@style/MaterialButton"
        android:text="@string/delete" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_seven"
        style="@style/MaterialButton"
        android:text="@string/seven" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_eight"
        style="@style/MaterialButton"
        android:text="@string/eight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_nine"
        style="@style/MaterialButton"
        android:text="@string/nine" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_divide"
        style="@style/MaterialButton.Grey"
        android:text="@string/divide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_four"
        style="@style/MaterialButton"
        android:text="@string/four" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_five"
        style="@style/MaterialButton"
        android:text="@string/five" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_six"
        style="@style/MaterialButton"
        android:text="@string/six" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_multiply"
        style="@style/MaterialButton.Grey"
        android:text="@string/multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_one"
        style="@style/MaterialButton"
        android:text="@string/one" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_two"
        style="@style/MaterialButton"
        android:text="@string/two" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_three"
        style="@style/MaterialButton"
        android:text="@string/three" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_minus"
        style="@style/MaterialButton.Grey"
        android:text="@string/minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_zero"
        style="@style/MaterialButton"
        android:text="@string/zero" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dot"
        style="@style/MaterialButton"
        android:text="@string/dot" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_equals"
        style="@style/MaterialButton.Accent"
        android:text="@string/equals" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_plus"
        style="@style/MaterialButton.Grey"
        android:text="@string/plus" />
</GridLayout>