<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/text.input.header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_ru"
        android:textAlignment="center" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/operations_text"
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_text"
        style="@style/text.input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="number" />

    <include
        android:id="@+id/background"
        layout="@layout/activity_background" />

</LinearLayout>